fragment to add bike in place

--- a/exercici1/app/src/main/res/values/strings.xml
+++ b/exercici1/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="option_3">Option 3</string>
     <string name="option_4">Option 4</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_bike_add_bike_button">Add bike</string>
+    <string name="add_bike_id">Identifier</string>
+    <string name="add_bike_description">Description</string>
 </resources>
