--- a/exercici1/app/src/main/res/values-en-rGB/strings.xml
+++ b/exercici1/app/src/main/res/values-en-rGB/strings.xml
@@ -23,4 +23,8 @@
     <string name="option_2">Add a bike</string>
     <string name="option_3">Option 3</string>
     <string name="option_4">Option 4</string>
+
+    <string name="add_bike_add_bike_button">Add bike</string>
+    <string name="add_bike_id">Identifier</string>
+    <string name="add_bike_description">Description</string>
 </resources>
