--- a/exercici1/app/src/main/res/values/strings.xml
+++ b/exercici1/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="add_bike_id">Identifier</string>
     <string name="add_bike_description">Description</string>
     <string name="title_activity_maps">Map</string>
+    <string name="city_image_description">City image</string>
 </resources>
