--- a/exercici1/app/src/main/res/values-en-rGB/strings.xml
+++ b/exercici1/app/src/main/res/values-en-rGB/strings.xml
@@ -24,6 +24,8 @@
     <string name="option_3">Maps</string>
     <string name="option_4">Towns</string>
 
+    <string name="city_image_description">City image</string>
+
     <string name="title_activity_maps">Map</string>
 
     <string name="add_bike_add_bike_button">Add bike</string>
